--- a/index.html
+++ b/index.html
@@ -151,6 +151,9 @@
         <div class="tab-menu app-menu-item flex-center" data-chapter="land-menu" data-tooltip="Ландшафт">
           <img class="icon" src="img/icons/three-active.svg" alt="" />
         </div>
+        <div class="tab-menu app-menu-item flex-center" data-chapter="#" data-tooltip="Готовые решения">
+          <img class="icon" src="img/icons/home-active2.svg" alt="" />
+        </div>
 
       </div>
       <div class="fr custom-scroll">
@@ -348,6 +351,14 @@
               <div class="tab-menu-dop layout-group-item" data-chapter="land">
                 <div class="img"><img src="img/icons/three-active.svg" alt=""></div>
                 <h3>Ландшафт</h3>
+              </div>
+              <div class="tab-menu-dop layout-group-item" data-chapter="paving">
+                <div class="img"><img src="img/icons/wall-active.svg" alt=""></div>
+                <h3>Брусчатка</h3>
+              </div>
+              <div class="tab-menu-dop layout-group-item" data-chapter="zabor">
+                <div class="img"><img src="img/icons/fence-active.svg" alt=""></div>
+                <h3>Ограждения</h3>
               </div>
               <div class="tab-menu-dop layout-group-item" data-chapter="type-zabor">
                 <div class="img"><img src="img/icons/fence-active.svg" alt=""></div>
@@ -750,6 +761,85 @@
             </div>
           </div>
         </div>
+        <div class="app-chapter app-chapter-dop" id="paving">
+          <div class="inner">
+            <h2>Брусчатка</h2>
+            <div class="wrap-item custom-scroll">
+              <div class="item active" style="background-image: url(img/land-textures/1.jpg);"
+                data-textures="img/land-textures/1.jpg">
+                <div class="btn-item">
+                  <span class="checked"></span>
+                </div>
+              </div>
+              <div class="item" style="background-image: url(img/land-textures/2.jpg);"
+                data-textures="img/land-textures/2.jpg">
+                <div class="btn-item">
+                  <span class="checked"></span>
+                </div>
+              </div>
+              <div class="item" style="background-image: url(img/land-textures/3.jpg);"
+                data-textures="img/land-textures/3.jpg">
+                <div class="btn-item">
+                  <span class="checked"></span>
+                </div>
+              </div>
+              <div class="item" style="background-image: url(img/land-textures/4.jpg);"
+                data-textures="img/land-textures/4.jpg">
+                <div class="btn-item">
+                  <span class="checked"></span>
+                </div>
+              </div>
+              <div class="item" style="background-image: url(img/land-textures/5.jpg);"
+                data-textures="img/land-textures/5.jpg">
+                <div class="btn-item">
+                  <span class="checked"></span>
+                </div>
+              </div>
+              <div class="item" style="background-image: url(img/land-textures/6.jpg);"
+                data-textures="img/land-textures/6.jpg">
+                <div class="btn-item">
+                  <span class="checked"></span>
+                </div>
+              </div>
+              <div class="item" style="background-image: url(img/land-textures/7.jpg);"
+                data-textures="img/land-textures/7.jpg">
+                <div class="btn-item">
+                  <span class="checked"></span>
+                </div>
+              </div>
+              <div class="item" style="background-image: url(img/land-textures/8.jpg);"
+                data-textures="img/land-textures/8.jpg">
+                <div class="btn-item">
+                  <span class="checked"></span>
+                </div>
+              </div>
+              <div class="item" style="background-image: url(img/land-textures/9.jpg);"
+                data-textures="img/land-textures/9.jpg">
+                <div class="btn-item">
+                  <span class="checked"></span>
+                </div>
+              </div>
+              <div class="item" style="background-image: url(img/land-textures/10.jpg);"
+                data-textures="img/land-textures/10.jpg">
+                <div class="btn-item">
+                  <span class="checked"></span>
+                </div>
+              </div>
+              <div class="item" style="background-image: url(img/land-textures/11.jpg);"
+                data-textures="img/land-textures/11.jpg">
+                <div class="btn-item">
+                  <span class="checked"></span>
+                </div>
+              </div>
+              <div class="item" style="background-image: url(img/land-textures/12.jpg);"
+                data-textures="img/land-textures/12.jpg">
+                <div class="btn-item">
+                  <span class="checked"></span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
         <div class="app-chapter app-chapter-dop" id="type-zabor">
           <div class="inner">
             <h2>Тип Ограждения</h2>
@@ -765,6 +855,73 @@
                 </div>
               </div>
               <div class="item" style="background-image: url(img/type-zabor/grass.jpg);" data-model="3">
+                <div class="btn-item">
+                  <span class="checked"></span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="app-chapter app-chapter-dop" id="zabor">
+          <div class="inner">
+            <h2>Брусчатка</h2>
+            <div class="wrap-item custom-scroll">
+              <div class="item active" style="background-image: url(img/zabor/0.jpg);" data-textures="img/zabor/0.jpg">
+                <div class="btn-item">
+                  <span class="checked"></span>
+                </div>
+              </div>
+              <div class="item" style="background-image: url(img/zabor/1.jpg);" data-textures="img/zabor/1.jpg">
+                <div class="btn-item">
+                  <span class="checked"></span>
+                </div>
+              </div>
+              <div class="item" style="background-image: url(img/zabor/2.jpg);" data-textures="img/zabor/2.jpg">
+                <div class="btn-item">
+                  <span class="checked"></span>
+                </div>
+              </div>
+              <div class="item" style="background-image: url(img/zabor/3.jpg);" data-textures="img/zabor/3.jpg">
+                <div class="btn-item">
+                  <span class="checked"></span>
+                </div>
+              </div>
+              <div class="item" style="background-image: url(img/zabor/4.jpg);" data-textures="img/zabor/4.jpg">
+                <div class="btn-item">
+                  <span class="checked"></span>
+                </div>
+              </div>
+              <div class="item" style="background-image: url(img/zabor/5.jpg);" data-textures="img/zabor/5.jpg">
+                <div class="btn-item">
+                  <span class="checked"></span>
+                </div>
+              </div>
+              <div class="item" style="background-image: url(img/zabor/6.jpg);" data-textures="img/zabor/6.jpg">
+                <div class="btn-item">
+                  <span class="checked"></span>
+                </div>
+              </div>
+              <div class="item" style="background-image: url(img/zabor/7.jpg);" data-textures="img/zabor/7.jpg">
+                <div class="btn-item">
+                  <span class="checked"></span>
+                </div>
+              </div>
+              <div class="item" style="background-image: url(img/zabor/8.jpg);" data-textures="img/zabor/8.jpg">
+                <div class="btn-item">
+                  <span class="checked"></span>
+                </div>
+              </div>
+              <div class="item" style="background-image: url(img/zabor/9.jpg);" data-textures="img/zabor/9.jpg">
+                <div class="btn-item">
+                  <span class="checked"></span>
+                </div>
+              </div>
+              <div class="item" style="background-image: url(img/zabor/10.jpg);" data-textures="img/zabor/10.jpg">
+                <div class="btn-item">
+                  <span class="checked"></span>
+                </div>
+              </div>
+              <div class="item" style="background-image: url(img/zabor/11.jpg);" data-textures="img/zabor/11.jpg">
                 <div class="btn-item">
                   <span class="checked"></span>
                 </div>
