--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Comfortaa&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/reset.css" />
-  <link rel="stylesheet" href="css/style.css?ver=1.6" />
-  <link rel="stylesheet" href="css/pdf.css?ver=1.6">
+  <link rel="stylesheet" href="css/style.css?ver=1.7" />
+  <link rel="stylesheet" href="css/pdf.css?ver=1.7">
 
   <script async src="https://unpkg.com/es-module-shims@1.8.0/dist/es-module-shims.js"></script>
 
@@ -74,7 +74,7 @@
           <path d="M0 30H65V56H0V30Z" fill="#D9D9D9" />
         </svg>
       </div>
-      <div class="mode" id="mode-3d">2D</div>
+      <div style="display: none;" class=" mode" id="mode-3d">2D</div>
       <div class="mode active" id="mode-3d-three">3D</div>
     </div>
     <div id="modes-social" class="box-shadow sidebar-social">
@@ -373,7 +373,7 @@
             <div class="wrap-item custom-scroll">
               <div class="item" style="background-image: url(img/solution-screen/1.jpg);" data-land="Land-2"
                 data-bricks="img/solution/3.png" data-color="221202" data-paving="img/land-textures/3.jpg"
-                data-zabor="img/zabor/2.jpg" data-cher="img/cher/cherepitsa-3.jpg"
+                data-zabor="img/solution/3.png" data-cher="img/cher/cherepitsa-3.jpg"
                 data-dado="img/kladka_tsokol/Сottage_brick.jpg">
                 <div class="btn-item">
                   <span class="checked"></span>
@@ -381,7 +381,7 @@
               </div>
               <div class="item" style="background-image: url(img/solution-screen/2.jpg);" data-land="Land-2"
                 data-bricks="img/solution/2.png" data-color="DDD3C4" data-paving="img/land-textures/9.jpg"
-                data-zabor="img/zabor/3.jpg" data-cher="img/cher/cherepitsa-8.jpg"
+                data-zabor="img/solution/2.png" data-cher="img/cher/cherepitsa-8.jpg"
                 data-dado="img/kladka_tsokol/Сottage_brick.jpg">
                 <div class="btn-item">
                   <span class="checked"></span>
@@ -389,7 +389,7 @@
               </div>
               <div class="item" style="background-image: url(img/solution-screen/3.jpg);" data-land="Land-2"
                 data-bricks="img/solution/1.png" data-color="540103" data-paving="img/land-textures/12.jpg"
-                data-zabor="img/zabor/5.jpg" data-cher="img/cher/cherepitsa-4.jpg"
+                data-zabor="img/solution/1.png" data-cher="img/cher/cherepitsa-4.jpg"
                 data-dado="img/kladka_tsokol/Stroeher_Stroeher.jpg">
                 <div class="btn-item">
                   <span class="checked"></span>
@@ -397,15 +397,15 @@
               </div>
               <div class="item" style="background-image: url(img/solution-screen/4.jpg);" data-land="Land-2"
                 data-bricks="img/solution/4.png" data-color="DDD3C4" data-paving="img/land-textures/11.jpg"
-                data-zabor="img/zabor/2.jpg" data-cher="img/cher/cherepitsa-5.jpg"
+                data-zabor="img/solution/4.png" data-cher="img/cher/cherepitsa-5.jpg"
                 data-dado="img/kladka_tsokol/Stroeher_Tabakbraun.jpg">
                 <div class="btn-item">
                   <span class="checked"></span>
                 </div>
               </div>
               <div class="item" style="background-image: url(img/solution-screen/5.jpg);" data-land="Land-2"
-                data-bricks="img/solution/6.png" data-color="DDD3C4" data-paving="img/land-textures/2.jpg"
-                data-zabor="img/zabor/1.jpg" data-cher="img/cher/Cherepicza.jpg"
+                data-bricks="img/solution/5.png" data-color="DDD3C4" data-paving="img/land-textures/2.jpg"
+                data-zabor="img/solution/5.png" data-cher="img/cher/Cherepicza.jpg"
                 data-dado="img/kladka_tsokol/Stroeher_Stroeher.jpg">
                 <div class="btn-item">
                   <span class="checked"></span>
@@ -413,7 +413,7 @@
               </div>
               <div class="item" style="background-image: url(img/solution-screen/6.jpg);" data-land="Land-2"
                 data-bricks="img/solution/6.png" data-color="DDD3C4" data-paving="img/land-textures/5.jpg"
-                data-zabor="img/zabor/3.jpg" data-cher="img/cher/cherepitsa-6.jpg"
+                data-zabor="img/solution/6.png" data-cher="img/cher/cherepitsa-6.jpg"
                 data-dado="img/kladka_tsokol/Stroeher_Stroeher.jpg">
                 <div class="btn-item">
                   <span class="checked"></span>
@@ -791,7 +791,7 @@
         </div>
         <div class="app-chapter app-chapter-dop" id="land">
           <div class="inner">
-            <h2>Черепица</h2>
+            <h2>Ландшафт</h2>
             <div class="wrap-item custom-scroll">
               <div class="item active" style="background-image: url(img/land/1.jpg);" data-model="Land-1">
                 <div class="btn-item">
@@ -1139,7 +1139,7 @@
   "></script>
 
 
-  <script type="module" src="js/main.js?ver=1.6" defer></script>
+  <script type="module" src="js/main.js?ver=1.7" defer></script>
 </body>
 
 </html>
