--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <path d="M0 30H65V56H0V30Z" fill="#D9D9D9" />
         </svg>
       </div>
-      <div style="display: none;" class=" mode" id="mode-3d">2D</div>
+      <div class="mode" id="mode-3d">2D</div>
       <div class="mode active" id="mode-3d-three">3D</div>
     </div>
     <div id="modes-social" class="box-shadow sidebar-social">
@@ -153,6 +153,11 @@
         </div>
         <div class="tab-menu app-menu-item flex-center" data-chapter="readySolutions" data-tooltip="Готовые решения">
           <img class="icon" src="img/icons/home-active2.svg" alt="" />
+        </div>
+        <div class="tab-menu-footer">
+          <div class="tab-menu app-menu-item flex-center" data-chapter="addOptions" data-tooltip="Дополнительные опции">
+            <img class="icon" src="img/icons/mountain-active.svg" alt="" />
+          </div>
         </div>
 
       </div>
@@ -417,6 +422,34 @@
                 data-dado="img/kladka_tsokol/Stroeher_Stroeher.jpg">
                 <div class="btn-item">
                   <span class="checked"></span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="app-chapter app-chapter-dop" id="addOptions">
+          <div class="inner">
+            <h2>Доп. Опции</h2>
+            <div class="wrap-item g-4 custom-scroll">
+              <div class="wrap-checkbox">
+                <h4 class="">Задний фон:</h4>
+                <div class="item-checkbox">
+                  <input type="checkbox" value="None" id="check_bg" name="check_bg">
+                  <label for="check_bg"></label>
+                </div>
+              </div>
+              <div class="wrap-checkbox">
+                <h4 class="">Крыша:</h4>
+                <div class="item-checkbox">
+                  <input type="checkbox" value="None" id="check_lab" name="check_lab" checked>
+                  <label for="check_lab"></label>
+                </div>
+              </div>
+              <div class="wrap-checkbox">
+                <h4 class="">2 этаж:</h4>
+                <div class="item-checkbox">
+                  <input type="checkbox" value="None" id="check_l2" name="check_l2" checked>
+                  <label for="check_l2"></label>
                 </div>
               </div>
             </div>
