--- a/index.html
+++ b/index.html
@@ -441,8 +441,8 @@
               <div class="wrap-checkbox">
                 <h4 class="">Крыша:</h4>
                 <div class="item-checkbox">
-                  <input type="checkbox" value="None" id="check_lab" name="check_lab" checked>
-                  <label for="check_lab"></label>
+                  <input type="checkbox" value="None" id="check_roof" name="check_lab" checked>
+                  <label for="check_roof"></label>
                 </div>
               </div>
               <div class="wrap-checkbox">
