--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Comfortaa&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/reset.css" />
-  <link rel="stylesheet" href="css/style.css?ver=1.9" />
-  <link rel="stylesheet" href="css/pdf.css?ver=1.9">
+  <link rel="stylesheet" href="css/style.css?ver=2.0" />
+  <link rel="stylesheet" href="css/pdf.css?ver=2.0">
 
   <script async src="https://unpkg.com/es-module-shims@1.8.0/dist/es-module-shims.js"></script>
 
@@ -1087,7 +1087,9 @@
   <div id="yourHtmlElement" class="generator-pdf">
     <div class="generator-pdf__page">
       <div class="generator-pdf__header">
+        <p class="generator-pdf__address">8 800 511 81 06</p>
         <div class="logo"><img src="pdf/logoakbarspng.png" alt=""></div>
+        <p class="generator-pdf__address">г. Казань, ул. Г. Кариева, д.10</p>
       </div>
       <div class="generator-pdf__screenshot">
         <p class="text">3D Конфигуратор дома:</p>
@@ -1172,7 +1174,7 @@
   "></script>
 
 
-  <script type="module" src="js/main.js?ver=1.9" defer></script>
+  <script type="module" src="js/main.js?ver=2.0" defer></script>
 </body>
 
 </html>
