--- a/index.html
+++ b/index.html
@@ -145,6 +145,9 @@
         <div class="tab-menu app-menu-item flex-center" data-chapter="dado" data-tooltip="Цоколь">
           <img class="icon" src="img/icons/house-active.svg" alt="" />
         </div>
+        <div class="tab-menu app-menu-item flex-center" data-chapter="fence-menu" data-tooltip="Ограждения">
+          <img class="icon" src="img/icons/fence-active.svg" alt="" />
+        </div>
         <div class="tab-menu app-menu-item flex-center" data-chapter="land-menu" data-tooltip="Ландшафт">
           <img class="icon" src="img/icons/three-active.svg" alt="" />
         </div>
@@ -347,6 +350,24 @@
             </div>
           </div>
         </div>
+        <div class="app-chapter" id="fence-menu">
+          <div class="inner">
+            <div class="group-items">
+              <div class="tab-menu-dop layout-group-item" data-chapter="type-zabor">
+                <div class="img"><img src="img/icons/fence-active.svg" alt=""></div>
+                <h3>Тип ограждения</h3>
+              </div>
+              <div class="tab-menu-dop layout-group-item" data-chapter="zabor">
+                <div class="img"><img src="img/icons/fence-active.svg" alt=""></div>
+                <h3>Ограждения</h3>
+              </div>
+              <div class="tab-menu-dop layout-group-item" data-chapter="zabor-color">
+                <div class="img"><img src="img/icons/fence-active.svg" alt=""></div>
+                <h3>Цвет ворот</h3>
+              </div>
+            </div>
+          </div>
+        </div>
         <div class="app-chapter" id="land-menu">
           <div class="inner">
             <div class="group-items">
@@ -357,14 +378,6 @@
               <div class="tab-menu-dop layout-group-item" data-chapter="paving">
                 <div class="img"><img src="img/icons/wall-active.svg" alt=""></div>
                 <h3>Брусчатка</h3>
-              </div>
-              <div class="tab-menu-dop layout-group-item" data-chapter="zabor">
-                <div class="img"><img src="img/icons/fence-active.svg" alt=""></div>
-                <h3>Ограждения</h3>
-              </div>
-              <div class="tab-menu-dop layout-group-item" data-chapter="type-zabor">
-                <div class="img"><img src="img/icons/fence-active.svg" alt=""></div>
-                <h3>Тип Ограждения</h3>
               </div>
             </div>
           </div>
@@ -838,11 +851,6 @@
                   <span class="checked"></span>
                 </div>
               </div>
-              <div class="item" style="background-image: url(img/land/4.jpg);" data-model="Land-4">
-                <div class="btn-item">
-                  <span class="checked"></span>
-                </div>
-              </div>
             </div>
           </div>
         </div>
@@ -1007,6 +1015,39 @@
                 </div>
               </div>
               <div class="item" style="background-image: url(img/zabor/11.jpg);" data-textures="img/zabor/11.jpg">
+                <div class="btn-item">
+                  <span class="checked"></span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="app-chapter app-chapter-dop" id="zabor-color">
+          <div class="inner">
+            <h2>Цвет ворот</h2>
+            <div class="image-items custom-scroll">
+              <div class="image-item active" style="background-image: url(img/zabor-color/1.jpg);" data-color="221202">
+                <div class="btn-item">
+                  <span class="checked"></span>
+                </div>
+              </div>
+              <div class="image-item" style="background-image: url(img/zabor-color/2.jpg);" data-color="3a3a38">
+                <div class="btn-item">
+                  <span class="checked"></span>
+                </div>
+              </div>
+              <div class="image-item" style="background-image: url(img/zabor-color/3.jpg);" data-color="DDD3C4">
+                <div class="btn-item">
+                  <span class="checked"></span>
+                </div>
+
+              </div>
+              <div class="image-item" style="background-image: url(img/zabor-color/4.jpg);" data-color="540103">
+                <div class="btn-item">
+                  <span class="checked"></span>
+                </div>
+              </div>
+              <div class="image-item" style="background-image: url(img/zabor-color/5.jpg);" data-color="053800">
                 <div class="btn-item">
                   <span class="checked"></span>
                 </div>
